--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     <a class="nav-link active" aria-current="page" href="#">تواصل معنا </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">من نحن</a>
+                    <a class="nav-link" href="#"> من أنا</a>
                   </li>
                   <li class="nav-item dropdown">
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#arewe">من نحن</a></li>
+                      <li><a class="dropdown-item" href="#arewe">من أنا</a></li>
                       <li><a class="dropdown-item" href="#connctme">تواصل معنا</a></li>
                     </ul>
                   </li>
@@ -80,7 +80,7 @@
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body small">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 18rem; hight: 18rem;">
             <img src="images/htmlcssjs.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">html css js</h5>
@@ -138,10 +138,9 @@
   
       <center>
         <p>
-          <i class="fa fa-star fa-2x"></i>
+          
           <i>رمضان مبارك...</i>
-          <i class="fa fa-star fa-2x"></i>
-
+        
         </p>
       </center>
 
