--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body small">
-          <div class="card" style="width: 18rem; hight: 18rem;">
+          <div class="card" style="width: 18rem; hight: 30px;">
             <img src="images/htmlcssjs.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">html css js</h5>
@@ -139,7 +139,7 @@
       <center>
         <p>
           
-          <i>رمضان مبارك...</i>
+          <h3">رمضان مبارك...</h3>
         
         </p>
       </center>
