--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h5 class="offcanvas-title" id="offcanvasBottomLabel">اهلا وسهلا بك ...<i class="fa fa-smile  fa-2x"></i></h5>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body small">
+        <div class="offcanvas-body big">
           <div class="card" style="width: 18rem; hight: 30px;">
             <img src="images/htmlcssjs.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -139,7 +139,7 @@
       <center>
         <p>
           
-          <h3">رمضان مبارك...</h3>
+          <h3 style="padding:15px;">رمضان مبارك...</h3>
         
         </p>
       </center>
