--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           <h5 class="offcanvas-title" id="offcanvasBottomLabel">اهلا وسهلا بك ...<i class="fa fa-smile  fa-2x"></i></h5>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body big">
-          <div class="card" style="width: 18rem; hight: 30px;">
+        <div class="offcanvas-body small">
+          <div class="card" style="width: 18rem;">
             <img src="images/htmlcssjs.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">html css js</h5>
