--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
 
 
-      <div class="offcanvas offcanvas-bottom" style="height: 100vh; width: 100%; tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+      <div class="offcanvas offcanvas-bottom"tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasBottomLabel">اهلا وسهلا بك ...<i class="fa fa-smile  fa-2x"></i></h5>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
