--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           <h5 class="offcanvas-title" id="offcanvasBottomLabel">اهلا وسهلا بك ...<i class="fa fa-smile  fa-2x"></i></h5>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
+       <center>
         <div class="offcanvas-body small">
           <div class="card" style="width: 18rem;">
             <img src="images/htmlcssjs.png" class="card-img-top" alt="...">
@@ -135,7 +136,7 @@
           </div>
         </div>
       </div>
-  
+  </center>   
       <center>
         <p>
           
