--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
 
           </div>
-          <div class="card" style="width: 18rem; padding:7px">
+          <div class="card" style="width: 18rem;">
             <img src="images/express.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">express node js</h5>
