--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container" id="arewe">
           <div class="card text-center">
               <div class="card-header">
-                  من نحن !!؟
+                  من أنا !!؟
               </div>
               <div class="card-body">
                   <p class="card-text">أنا مبرمج تطبيقات ومصمم صور، متخصص في تطوير حلول وتطبيقات ويب وموبايل فعّالة وجذابة. باستخدام مهاراتي البرمجية والتصميمية، أسعى دائمًا لتقديم تجارب مستخدم رائعة وفعّالة.</p>
@@ -202,7 +202,8 @@
             </div>
             <div class="card-footer text-muted">
             </div>
-          </div>
+          </div> 
+            <h4>Bachir 2024♡</h4>
         </center>
 
       </footer>
