--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   </li>
                 </ul>
               </div>
-              <a class="navbar-brand" href="#">𝓑𝓪𝓬𝓱𝓲𝓻</a>
+              <a class="navbar-brand" href="#"><i class='fas fa-code' style='font-size:36px'></i> 𝓑𝓪𝓬𝓱𝓲𝓻</a>
             </div>
           </nav>
       </nav>
