--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   </li>
                 </ul>
               </div>
-              <a class="navbar-brand" href="#"><i class="fa fa-instagram  fa-2x"></i>
+              <a class="navbar-brand" href="#"><i class="fa fa-code  fa-2x"></i>
                  𝓑𝓪𝓬𝓱𝓲𝓻</a>
             </div>
           </nav>
