--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                   </li>
                 </ul>
               </div>
-              <a class="navbar-brand" href="#"><img src="images/photome.jpg" class="rounded" alt="Cinque Terre"><i class="fa fa-code  fa-2x"></i>
-                 𝓑𝓪𝓬𝓱𝓲𝓻</a>
+              <a class="navbar-brand" href="#"><i class="fa fa-code  fa-2x"></i>
+                 𝓑𝓪𝓬𝓱𝓲𝓻</a><img src="images/photome.jpg" class="rounded" alt="Cinque Terre">
             </div>
           </nav>
       </nav>
