--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
               </div>
               <a class="navbar-brand" href="#"><i class="fa fa-code  fa-2x"></i>
-                 𝓑𝓪𝓬𝓱𝓲𝓻</a><img src="images/photome.jpg" style="with:5px"; class="rounded" alt="Cinque Terre">
+                 𝓑𝓪𝓬𝓱𝓲𝓻</a><img src="images/photome.jpg" style="with:5px";>
             </div>
           </nav>
       </nav>
