--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </ul>
               </div>
               <a class="navbar-brand" href="#"><i class="fa fa-code  fa-2x"></i>
-                 𝓑𝓪𝓬𝓱𝓲𝓻</a>
+                 𝓑𝓪𝓬𝓱𝓲𝓻</a><img src="images/photome.jpg" alt="Cinque Terre" class="rounded-image" style="width:5px; height:5px; object-fit: cover; border-radius: 50%;">
+
             </div>
           </nav>
       </nav>
