--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+    <style>
+    body.dark-mode {
+      background-color: #222;
+      color: #fff;
+    }
 
+    .navbar-light .navbar-toggler-icon {
+      background-color: #fff;
+    }
 
+    .navbar-light .navbar-toggler-icon:focus {
+      outline: none;
+    }
+
+    .navbar-light .navbar-toggler-icon:active {
+      background-color: #eee;
+    }
+  </style>
 <body dir="rtl">
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <nav class="navbar navbar-expand-lg">
@@ -35,6 +51,10 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#arewe">من أنا</a></li>
                       <li><a class="dropdown-item" href="#connctme">تواصل معنا</a></li>
+                        <button onclick="toggleDarkMode()" class="btn btn-dark">
+                         <i class="fas fa-moon" id="darkModeIcon"></i>
+                      </button>
+
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -217,6 +237,18 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+    <script>
+  function toggleDarkMode() {
+    const body = document.querySelector('body');
+    body.classList.toggle('dark-mode');
+
+    const icon = document.getElementById('darkModeIcon');
+    icon.classList.toggle('fa-sun');
+    icon.classList.toggle('fa-moon');
+  }
+</script>
+
 
 </body>
 
